// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SiteHeader renders correctly with all nav links 1`] = `
.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c2 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c5 {
  color: #eebbc3;
  text-decoration: none;
  line-height: 1;
  transition: color 0.2s ease-in-out;
}

.c5:hover {
  color: #eebbc3;
}

.c5:focus {
  outline: 2px solid #eebbc3;
  outline-offset: 2px;
}

.c0 {
  position: sticky;
  top: 0;
  z-index: 100;
  background: #232946;
  border-bottom: 1px solid rgba(255, 255, 255, 0.08);
  padding: 0.75rem 0;
}

.c3 {
  font-family: "Rainier",sans-serif;
  font-size: 1.25rem;
  font-weight: bold;
  color: #fffffe;
  cursor: pointer;
  text-decoration: none;
}

.c4 {
  display: none;
  gap: 2rem;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 900px) {
  .c4 {
    display: flex;
  }
}

<div>
  <header
    class="c0"
  >
    <section
      class="c1"
    >
      <div
        class="c2"
      >
        <a
          class="c3"
          href="/"
        >
          Andrea Agostini
        </a>
        <nav
          class="c4"
        >
          <a
            class="c5"
            href="#projects"
            tabindex="0"
          >
            Projects
          </a>
          <a
            class="c5"
            href="#skills"
            tabindex="0"
          >
            Skills
          </a>
          <a
            class="c5"
            href="#experience"
            tabindex="0"
          >
            Experience
          </a>
          <a
            class="c5"
            href="#contact"
            tabindex="0"
          >
            Contact
          </a>
        </nav>
      </div>
    </section>
  </header>
</div>
`;

exports[`SiteHeader renders correctly with no nav links 1`] = `
.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c2 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c0 {
  position: sticky;
  top: 0;
  z-index: 100;
  background: #232946;
  border-bottom: 1px solid rgba(255, 255, 255, 0.08);
  padding: 0.75rem 0;
}

.c3 {
  font-family: "Rainier",sans-serif;
  font-size: 1.25rem;
  font-weight: bold;
  color: #fffffe;
  cursor: pointer;
  text-decoration: none;
}

.c4 {
  display: none;
  gap: 2rem;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 900px) {
  .c4 {
    display: flex;
  }
}

<div>
  <header
    class="c0"
  >
    <section
      class="c1"
    >
      <div
        class="c2"
      >
        <a
          class="c3"
          href="/"
        >
          AA
        </a>
        <nav
          class="c4"
        />
      </div>
    </section>
  </header>
</div>
`;
